Update css and html

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               <p>Post to Linkedin</p>
             </div>
           </div>
-          <article class="goober">
+          <article class="job-links">
             <div class="linktothisjob">
               <h3><i class="fas fa-globe-americas"></i></h3>
               <p>Link to this Job</p>
@@ -203,9 +203,7 @@
               <button class="copy">Copy</button>
             </div>
           </article>
-
-
-          <article class="goober">
+          <article class="job-links">
             <div class="use-button-widget">
               <h3><i class="fas fa-elementor"></i></i></h3>
               <p>Link to this Job</p>
@@ -218,9 +216,7 @@
               <button class="copy">Copy</button>
             </div>
           </article>
-
-
-          <article class="goober">
+          <article class="job-links">
             <div class="upload-resumes">
               <h3><i class="fas fa-paper-plane"></i></h3>
               <p>Upload Resumes by Email</p>
